# HumanSL_MAIN

./: .gitignore  CMakeLists.txt  main.cpp  main_impedance.cpp  main_vicon_offline.cpp  money_file.cpp  test_generation_and_joint_position.cpp  test_gpmp2_vs_rrt_star.cpp  test_joint_impedance.cpp  test_joint_position.cpp  test_kinova.cpp  test_pose_1.cpp  test_sleep.cpp  test_task_impedance.cpp  test_vicon.cpp  test_vicon_subject.cpp  workspace_analysis.cpp
TrajectoryExecution/: CMakeLists.txt
TrajectoryGeneration/: CMakeLists.txt
TrajectoryGeneration/include/: Planner.h  RRTStarPlanner.h  RRTStarSmoothing.h  TrajectoryComparison.h  TrajectoryInitiation.h  TrajectoryOptimization.h  analytical_ik.h  utils.h
TrajectoryGeneration/src/: GenerateArmModel.cpp  GenerateLogs.cpp  Planner.cpp  RRTStarPlanner.cpp  RRTStarSmoothing.cpp  TrajectoryComparison.cpp  TrajectoryInitiation.cpp  TrajectoryOptimization.cpp  Tube.cpp  main.cpp  utils.cpp
TrajectoryRealTime/: CMakeLists.txt
ViconDataStream/: CMakeLists.txt
config/: dh_params.yaml
logs/: display_record.py  display_results.py  display_sdf.py  display_taskspace_trajectory.py  failed_plan_results.yaml  gpmp2_results.yaml  left_approach_results.yaml  loadEventFromYaml.py  plan_10_results.yaml  plan_11_results.yaml  plan_12_results.yaml  plan_14_results.yaml  plan_15_results.yaml  plan_17_results.yaml  plan_1_results.yaml  plan_2_results.yaml  plan_3_results.yaml  plan_4_results.yaml  plan_5_results.yaml  plan_7_results.yaml  plan_8_results.yaml  plan_results.yaml  plan_task_results.yaml  replanned_results.yaml  (+8 more)
(+31 files in other folders)
